make sure the editable text label does not wrap and uses ellipsis on overflow

--- a/Tesserae/h5/assets/css/tss.editablelabel.css
+++ b/Tesserae/h5/assets/css/tss.editablelabel.css
@@ -20,7 +20,9 @@
 }
 
 .tss-editablelabel-textspan {
-    display: inline-flex;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .tss-editablelabel-textbox {
